# ArrayTransfomer

./: CMakeLists.txt  README.md
include/: arrayTransformer.hpp
src/: arrayTransformer.cpp  main.cpp
